@@ -2,6 +2,7 @@ Thu Apr 29 2004  Joe Allen <jhallen@world.std.com>
 	*:
 
 	Improve Fortran syntax file.
+	Improve Perl syntax file.
 
 
 Wed Apr 28 2004  Joe Allen <jhallen@world.std.com>
